--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<title>Fun Comic Maker</title>
 <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/129319796/?autostart=false" frameborder="0" allowfullscreen></iframe>
     
